Add lots of additional documentation
- Add note about chef 12 and standards
- Document configure, service, and plugin resources

Fixes #338.